; ModuleID = '/home/carl/AnghaBench/linux/fs/f2fs/extr_checkpoint.c_f2fs_grab_meta_page.c'
source_filename = "/home/carl/AnghaBench/linux/fs/f2fs/extr_checkpoint.c_f2fs_grab_meta_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }
%struct.f2fs_sb_info = type { i32 }
%struct.address_space = type { i32 }

@META = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.page* @f2fs_grab_meta_page(%struct.f2fs_sb_info* %0, i32 %1) #0 {
  %3 = alloca %struct.f2fs_sb_info*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.address_space*, align 8
  %6 = alloca %struct.page*, align 8
  store %struct.f2fs_sb_info* %0, %struct.f2fs_sb_info** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.f2fs_sb_info*, %struct.f2fs_sb_info** %3, align 8
  %8 = call %struct.address_space* @META_MAPPING(%struct.f2fs_sb_info* %7)
  store %struct.address_space* %8, %struct.address_space** %5, align 8
  store %struct.page* null, %struct.page** %6, align 8
  br label %9

9:                                                ; preds = %15, %2
  %10 = load %struct.address_space*, %struct.address_space** %5, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call %struct.page* @f2fs_grab_cache_page(%struct.address_space* %10, i32 %11, i32 0)
  store %struct.page* %12, %struct.page** %6, align 8
  %13 = load %struct.page*, %struct.page** %6, align 8
  %14 = icmp ne %struct.page* %13, null
  br i1 %14, label %17, label %15

15:                                               ; preds = %9
  %16 = call i32 (...) @cond_resched()
  br label %9

17:                                               ; preds = %9
  %18 = load %struct.page*, %struct.page** %6, align 8
  %19 = load i32, i32* @META, align 4
  %20 = call i32 @f2fs_wait_on_page_writeback(%struct.page* %18, i32 %19, i32 1, i32 1)
  %21 = load %struct.page*, %struct.page** %6, align 8
  %22 = call i32 @PageUptodate(%struct.page* %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %27, label %24

24:                                               ; preds = %17
  %25 = load %struct.page*, %struct.page** %6, align 8
  %26 = call i32 @SetPageUptodate(%struct.page* %25)
  br label %27

27:                                               ; preds = %24, %17
  %28 = load %struct.page*, %struct.page** %6, align 8
  ret %struct.page* %28
}

declare dso_local %struct.address_space* @META_MAPPING(%struct.f2fs_sb_info*) #1

declare dso_local %struct.page* @f2fs_grab_cache_page(%struct.address_space*, i32, i32) #1

declare dso_local i32 @cond_resched(...) #1

declare dso_local i32 @f2fs_wait_on_page_writeback(%struct.page*, i32, i32, i32) #1

declare dso_local i32 @PageUptodate(%struct.page*) #1

declare dso_local i32 @SetPageUptodate(%struct.page*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
